@@ -85,6 +85,7 @@ v14.0.00
 		Students: added settable thresholds for issuing behaviour alerts
 		Students: added extra action to allow deleting of application forms to be disabled
 		Students: added optional permission for students to only view their profile
+        Students: added data visualisation for student enrolment over time
 		Timetable: fixed TT not being navigable if user is not involved in any timetable
 		Timetable Admin: fix bulk checking bug in Tie Days to Dates
 		Timetable Admin: widened listing of staff in Course Enrolment by Person to include all staff (not just Teaching staff)
